- Fix bug #49536 (mb_detect_encoding() returns incorrect results when strict_mode is turned on.)   (patch by komura, thanks!)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@288273 c90b9560-bf6c-de11-be94-00142212c4b1